# visual_odometry_ros

./: .gitignore  CMakeLists.txt  LICENSE  README.md  exp_vo_rviz_config.rviz  gmon.out  package.xml  rqt_multiplot_scale_mono_vo.xml  scale_mono_vo_exp.rviz  scale_mono_vo_exp_stereo.rviz  scale_mono_vo_kitti.rviz  scale_mono_vo_kitti_stereo.rviz
config/: exp_cam0.yaml  exp_cam2.yaml  exp_stereo.yaml  exp_stereo2.yaml  kitti00.yaml  kitti_00.yaml  kitti_00_ba.yaml  kitti_01.yaml  kitti_02.yaml  kitti_03.yaml  kitti_04.yaml  kitti_05.yaml  kitti_06.yaml  kitti_07.yaml  kitti_08.yaml  kitti_09.yaml  kitti_10.yaml  mono0.yaml
config/mono/: exp_cam0.yaml  exp_cam2.yaml  kitti_00.yaml  kitti_01.yaml  kitti_02.yaml  kitti_03.yaml  kitti_05.yaml  kitti_06.yaml  kitti_07.yaml  kitti_08.yaml  kitti_09.yaml  kitti_10.yaml
config/stereo/: exp_stereo2.yaml  exp_stereo_ir.yaml  kitti_00_stereo.yaml  kitti_02_stereo.yaml  kitti_03_stereo.yaml  kitti_04_stereo.yaml  kitti_06_stereo.yaml  kitti_07_stereo.yaml  kitti_08_stereo.yaml
core/: CMakeLists.txt  package.xml
core/defines/: define_macro.h  define_type.h
core/image_cropper/: image_cropper.cpp  main_cropper.cpp
core/test/: aligned_memory.h  test_aligned_memory.cpp
core/util/: cout_color.h  geometry_library.cpp  histogram.cpp  image_processing.cpp  image_processing.h  pose3d.h  signal_handler_linux.cpp  signal_handler_linux.h  stop_watch_timer.cpp  stop_watch_timer.h  timer.cpp  timer.h  triangulate_3d.h
core/visual_odometry/: camera.cpp  camera.h  define_type.h  feature_extractor.cpp  feature_extractor.h  feature_tracker.cpp  feature_tracker.h  frame.cpp  frame.h  keyframes.cpp  keyframes.h  landmark.cpp  landmark.h  motion_estimator.cpp  motion_estimator.h
core/visual_odometry/ba_solver/: define_ba_type.h  landmark_ba.h  sparse_ba_parameters.h  sparse_bundle_adjustment.cpp  sparse_bundle_adjustment.h
core/visual_odometry/mono_vo/: mono_vo.cpp  mono_vo.h
core/visual_odometry/stereo_vo/: stereo_vo.cpp  stereo_vo.h
include/: backend_node.h  camera.h  feature_extractor.h  frame.h  landmark.h  mononode.h  motion_tracker.h  node.h  scale_mono_vo.h  signal_handler_linux.h
include/core/: bundle_adjustment_solver.h  camera.h  dataset_loader.h  feature_extractor.h  feature_tracker.h  frame.h  image_processing.h  keyframes.h  landmark.h  landmark_tracking.h  mapping.h  motion_estimator.h  motion_tracker.h  scale_estimator.h  scale_mono_vo.h  type_defines.h
include/image_cropper/: image_cropper.h
include/ros_wrapper/: backend_node.h  mono_vo_node.h  mononode.h  ros_print_in_color.h  stereo_vo_node.h  stereonode.h
include/stereo_rectifier/: stereo_rectifier.h
include/stereo_vo/: stereo_vo.h
include/util/: cout_color.h  geometry_library.h  histogram.h  pose3d.h  stop_watch_timer.h  trigonometry_fast.h
launch/: backend_only_kitti_00.launch  exp_cam0.launch  exp_cam2.launch  exp_stereo.launch  image_cropper.launch  kitti.launch  kitti_00.launch  kitti_00_ba.launch  kitti_01.launch  kitti_02.launch  kitti_03.launch  kitti_04.launch  kitti_05.launch  kitti_06.launch  kitti_07.launch  kitti_08.launch  kitti_09.launch  kitti_10.launch  mono0.launch  scale_mono_vo_kitti_00.launch  stereo_rectifier.launch
launch/mono/: backend_only_kitti_00.launch  exp_cam0.launch  kitti_02.launch  kitti_03.launch  kitti_04.launch  kitti_05.launch  kitti_06.launch  kitti_07.launch  kitti_08.launch  mono0.launch  monocular_vo.launch
launch/stereo/: exp_stereo.launch  kitti_00_stereo.launch  kitti_01_stereo.launch  kitti_02_stereo.launch  kitti_03_stereo.launch  kitti_04_stereo.launch  kitti_05_stereo.launch  kitti_06_stereo.launch  kitti_07_stereo.launch  kitti_08_stereo.launch  kitti_09_stereo.launch  kitti_10_stereo.launch  stereo_vo.launch
legacy/cpp/: trigonometry_fast.cpp
legacy/matlab/: stereoDisparityStatic.m
matlab_legacy/: stereoDisparityTemporal.m
msg/: statisticsStamped.msg
ros1/: CMakeLists.txt  package.xml
ros1/launch/mono/: exp_cam0.launch  exp_cam2.launch  mono0.launch  monocular_vo.launch
ros1/launch/mono/kitti/: kitti_00_mono.launch  kitti_10.launch
ros1/launch/stereo/: exp_stereo.launch  stereo_vo.launch
ros1/launch/stereo/kitti/: kitti_03_stereo.launch
ros1/msg/: statisticsStamped.msg
ros1/stereo_rectifier/: main_stereo_rectifier.cpp  stereo_rectifier.cpp  stereo_rectifier.h
ros1/test/: main_orbmatching_test.cpp  main_test_pose3d.cpp
ros1/util/: ros_print_in_color.cpp  ros_print_in_color.h
ros1/visual_odometry/: mono_vo.cpp  mono_vo_node.cpp  mono_vo_node.h  mono_vo_ros1.cpp  mono_vo_ros1.h  node_mono_vo.cpp  node_stereo_vo.cpp  stereo_vo.cpp  stereo_vo_node.cpp  stereo_vo_node.h  stereo_vo_ros1.cpp  stereo_vo_ros1.h
ros2/: CMakeLists.txt  package.xml
ros2/launch/stereo/: stereo_vo.launch.py  stereo_vo.launch.xml  stereo_vo_ir.launch.py
ros2/visual_odometry/: node_stereo_vo.cpp  stereo_vo_ros2.cpp  stereo_vo_ros2.h
rviz/: mono_vo_exp.rviz  mono_vo_kitti.rviz  stereo_vo_exp_stereo.rviz
src/: backend_node.cpp  camera.cpp  dataset_loader.cpp  feature_extractor.cpp  frame.cpp  image_processing.cpp  main.cpp  main_orbmatching_test.cpp  mononode.cpp  motion_tracker.cpp  node.cpp  scale_mono_vo.cpp  timer.cpp
src/core/: bundle_adjustment_solver.cpp  camera.cpp  dataset_loader.cpp  feature_extractor.cpp  feature_tracker.cpp  frame.cpp  image_processing.cpp  keyframes.cpp  landmark.cpp  landmark_tracking.cpp  mapping.cpp  motion_estimator.cpp  motion_tracker.cpp  scale_estimator.cpp  scale_mono_vo.cpp  scale_mono_vo_ap3p.cpp  scale_mono_vo_backend.cpp  scale_mono_vo_feature_tracking_only.cpp  scale_mono_vo_localbundle.cpp  scale_mono_vo_trackimage.cpp  (+3 more)
standalone/: CMakeLists.txt
standalone/depth_filter/: depth_filter.cpp  depth_filter.h
standalone/motion_estimator/: define_type.h  motion_estimator.cpp  motion_estimator.h
standalone/motion_estimator/util/: pose3d.cpp  pose3d.h  triangulate_3d.cpp
standalone/util/: geometry_library.cpp  geometry_library.h  pose3d.h  timer.cpp  triangulate_3d.cpp  triangulate_3d.h
test/: test_alignedmemory.cpp  test_cachemiss.cpp  test_orbmatching.cpp
(+73 files in other folders)
