<?xml version="1.0"?>
<package>
  <name>visual_odometry</name>
  <version>1.0.0</version>
  <description>visual_odometry meta-package</description>

  <maintainer email="Changhyeon@gmail.com">Changhyeon Kim</maintainer>

  <license>Apache</license>

  <build_depend>roscpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cmake_modules</run_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <meta-package/>
  </export>
</package>